@@ -7,7 +7,7 @@
 #  / /_/ /  _  /    _  /  / /_/ /  / /_/ /  / /_/ / _  /  _  / / /
 #  \____/   /_/     /_/   \_,__/   \____/   \__,_/  /_/   /_/ /_/
 #
-# Version: 4.0.0c.25032012
+# Version: 4.0.1c.07042012
 #
 
 #
@@ -49,7 +49,7 @@ fi
 #
 # Set property JAR name during the Ant build.
 #
-ANT_AUGMENTED_GGJAR=gridgain-4.0.0c.jar
+ANT_AUGMENTED_GGJAR=gridgain-4.0.1c.jar
 
 osname=`uname`
 
@@ -140,15 +140,27 @@ JMX_MON=-Dcom.sun.management.jmxremote
 # This enables remote unsecure access to JConsole or VisualVM.
 # ADD YOUR ADDITIONAL PARAMETERS/OPTIONS HERE
 #
-JMX_MON="${JMX_MON} -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+JMX_MON="${JMX_MON} -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.management.jmxremote.authenticate=false \
+-Dcom.sun.management.jmxremote.ssl=false"
 
 #
 # JVM options. See http://java.sun.com/javase/technologies/hotspot/vmoptions.jsp
-# for more details. Note that default settings use parallel GC.
+# for more details. Note that default settings use ** PARALLEL GC**.
+#
+# NOTE
+# ====
+# ASSERTIONS ARE DISABLED BY DEFAULT SINCE VERSION 3.5.
+# IF YOU WANT TO ENABLE THEM - ADD '-ea' TO JVM_OPTS VARIABLE
 #
 # ADD YOUR ADDITIONAL PARAMETERS/OPTIONS HERE
 #
-JVM_OPTS="-ea -XX:MaxPermSize=128m -XX:+UseParNewGC -XX:MaxNewSize=32m -XX:NewSize=32m -Xms256m -Xmx512m -XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0  -XX:+UseTLAB -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
+JVM_OPTS="-Xms512m -Xmx512m -XX:NewSize=64m -XX:MaxNewSize=64m -XX:PermSize=128m -XX:MaxPermSize=128m \
+-XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0 -XX:+UseTLAB -XX:+UseParNewGC -XX:+UseConcMarkSweepGC \
+-XX:+CMSClassUnloadingEnabled"
+
+# Uncomment if you get StackOverflowError.
+# On 64 bit systems this value can be larger, e.g. -Xss16m
+# JVM_OPTS="${JVM_OPTS} -Xss4m"
 
 # Uncomment to set preference for IPv4 stack.
 # JVM_OPTS="${JVM_OPTS} -Djava.net.preferIPv4Stack=true"
@@ -157,4 +169,6 @@ JVM_OPTS="-ea -XX:MaxPermSize=128m -XX:+UseParNewGC -XX:MaxNewSize=32m -XX:NewSi
 # Uncomment and change if remote debugging is required.
 # JVM_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n ${JVM_OPTS}"
 
-"${JAVA_HOME}/bin/java" ${JVM_OPTS} ${JMX_MON} ${QUIET} -DGRIDGAIN_SCRIPT  -DGRIDGAIN_HOME="${GRIDGAIN_HOME}" -DGRIDGAIN_PROG_NAME="$0" -cp "${CP}" org.gridgain.grid.loaders.cmdline.GridCommandLineLoader "${CONFIG}"
+"${JAVA_HOME}/bin/java" ${JVM_OPTS} ${JMX_MON} ${QUIET} -DGRIDGAIN_SCRIPT  \
+-DGRIDGAIN_HOME="${GRIDGAIN_HOME}" -DGRIDGAIN_PROG_NAME="$0" -cp "${CP}" \
+org.gridgain.grid.loaders.cmdline.GridCommandLineLoader "${CONFIG}"
