@@ -6,7 +6,7 @@
 :: / /_/ /  _  /    _  /  / /_/ /  / /_/ /  / /_/ / _  /  _  / / /
 :: \____/   /_/     /_/   \_,__/   \____/   \__,_/  /_/   /_/ /_/
 ::
-:: Version: 4.0.0c.25032012
+:: Version: 4.0.1c.07042012
 ::
 
 ::
@@ -70,7 +70,7 @@ goto error_finish
 :run
 
 :: This is Ant-augmented variable.
-set ANT_AUGMENTED_GGJAR=gridgain-4.0.0c.jar
+set ANT_AUGMENTED_GGJAR=gridgain-4.0.1c.jar
 
 ::
 :: Set GRIDGAIN_LIBS
@@ -95,8 +95,28 @@ set PROG_NAME=gridgain.bat
 if "%OS%" == "Windows_NT" set PROG_NAME=%~nx0%
 
 ::
+:: JVM options. See http://java.sun.com/javase/technologies/hotspot/vmoptions.jsp
+:: for more details. Note that default settings use **PARALLEL GC**.
+::
+:: NOTE
+:: ====
+:: ASSERTIONS ARE DISABLE BY DEFAULT SINCE VERSION 3.5.
+:: IF YOU WANT TO ENABLE THEM - ADD '-ea' TO JVM_OPTS VARIABLE
+::
+:: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
+::
+set JVM_OPTS=-Xms512m -Xmx512m -XX:NewSize=64m -XX:MaxNewSize=64m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0 -XX:+UseTLAB -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
+
+:: Uncomment if you get StackOverflowError.
+:: On 64 bit systems this value can be larger, e.g. -Xss16m
+:: set JVM_OPTS=%JVM_OPTS% -Xss4m
+
+:: Uncomment to set preference to IPv4 stack.
+:: set JVM_OPTS=%JVM_OPTS% -Djava.net.preferIPv4Stack=true
+
+::
 :: Start REPL.
 ::
-"%JAVA_HOME%\bin\java.exe" -Xss2m  -DGRIDGAIN_SCRIPT -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %QUIET% -cp "%CP%" scala.tools.nsc.MainGenericRunner -usejavacp -Yrepl-sync -i "%GRIDGAIN_HOME%\bin\scalar.scala"
+"%JAVA_HOME%\bin\java.exe" %JVM_OPTS%  -DGRIDGAIN_SCRIPT -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %QUIET% -cp "%CP%" scala.tools.nsc.MainGenericRunner -usejavacp -Yrepl-sync -i "%GRIDGAIN_HOME%\bin\scalar.scala"
 
 :error_finish
