@@ -7,7 +7,7 @@
 #  / /_/ /  _  /    _  /  / /_/ /  / /_/ /  / /_/ / _  /  _  / / /
 #  \____/   /_/     /_/   \_,__/   \____/   \__,_/  /_/   /_/ /_/
 #
-# Version: 4.0.0c.25032012
+# Version: 4.0.1c.07042012
 #
 
 #
@@ -51,7 +51,7 @@ fi
 #
 # Set property JAR name during the Ant build.
 #
-ANT_AUGMENTED_GGJAR=gridgain-4.0.0c.jar
+ANT_AUGMENTED_GGJAR=gridgain-4.0.1c.jar
 
 osname=`uname`
 
@@ -116,6 +116,28 @@ do
 done
 
 #
+# JVM options. See http://java.sun.com/javase/technologies/hotspot/vmoptions.jsp
+# for more details. Note that default settings use ** PARALLEL GC**.
+#
+# NOTE
+# ====
+# ASSERTIONS ARE DISABLED BY DEFAULT SINCE VERSION 3.5.
+# IF YOU WANT TO ENABLE THEM - ADD '-ea' TO JVM_OPTS VARIABLE
+#
+# ADD YOUR ADDITIONAL PARAMETERS/OPTIONS HERE
+#
+JVM_OPTS="-Xms512m -Xmx512m -XX:NewSize=64m -XX:MaxNewSize=64m -XX:PermSize=128m -XX:MaxPermSize=128m \
+-XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0 -XX:+UseTLAB -XX:+UseParNewGC -XX:+UseConcMarkSweepGC \
+-XX:+CMSClassUnloadingEnabled"
+
+# Uncomment if you get StackOverflowError.
+# On 64 bit systems this value can be larger, e.g. -Xss16m
+# JVM_OPTS="${JVM_OPTS} -Xss4m"
+
+# Uncomment to set preference for IPv4 stack.
+# JVM_OPTS="${JVM_OPTS} -Djava.net.preferIPv4Stack=true"
+
+#
 # Save terminal setting. Used to restore terminal on finish.
 #
 SAVED_STTY=`stty -g 2>/dev/null`
@@ -135,7 +157,7 @@ trap restoreSttySettings INT
 #
 # Start REPL.
 #
-${JAVA_HOME}/bin/java ${QUIET}  -DGRIDGAIN_SCRIPT \
+${JAVA_HOME}/bin/java ${JVM_OPTS} ${QUIET}  -DGRIDGAIN_SCRIPT \
 -DGRIDGAIN_HOME="${GRIDGAIN_HOME}" -DGRIDGAIN_PROG_NAME="$0" -cp "${CP}" \
 scala.tools.nsc.MainGenericRunner -usejavacp -Yrepl-sync -i ${GRIDGAIN_HOME}/bin/scalar.scala
 
