@@ -7,7 +7,7 @@
 #  / /_/ /  _  /    _  /  / /_/ /  / /_/ /  / /_/ / _  /  _  / / /
 #  \____/   /_/     /_/   \_,__/   \____/   \__,_/  /_/   /_/ /_/
 #
-# Version: 4.0.0c.25032012
+# Version: 4.0.1c.07042012
 #
 
 #
@@ -51,7 +51,7 @@ fi
 #
 # Set property JAR name during the Ant build.
 #
-ANT_AUGMENTED_GGJAR=gridgain-4.0.0c.jar
+ANT_AUGMENTED_GGJAR=gridgain-4.0.1c.jar
 
 osname=`uname`
 
@@ -149,8 +149,13 @@ JMX_MON="${JMX_MON} -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.ma
 #
 # ADD YOUR ADDITIONAL PARAMETERS/OPTIONS HERE
 #
-JVM_OPTS="-Xms512m -Xmx512m -Xss16m -XX:MaxPermSize=384m -XX:+UseParNewGC -XX:MaxNewSize=128m -XX:NewSize=32m \
--XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0 -XX:+UseTLAB -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
+JVM_OPTS="-Xms512m -Xmx512m -XX:NewSize=64m -XX:MaxNewSize=64m -XX:PermSize=128m -XX:MaxPermSize=128m \
+-XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0 -XX:+UseTLAB -XX:+UseParNewGC -XX:+UseConcMarkSweepGC \
+-XX:+CMSClassUnloadingEnabled"
+
+# Uncomment if you get StackOverflowError.
+# On 64 bit systems this value can be larger, e.g. -Xss16m
+# JVM_OPTS="${JVM_OPTS} -Xss4m"
 
 # Uncomment to set preference for IPv4 stack.
 # JVM_OPTS="${JVM_OPTS} -Djava.net.preferIPv4Stack=true"
